# serde_toon

./: .gitignore  .rune.yml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
benches/: serialization.rs
examples/: custom_options.rs  dynamic_values.rs  macro.rs  simple.rs  tabular_arrays.rs  token_efficiency.rs
src/: de.rs  error.rs  lib.rs  macros.rs  map.rs  options.rs  ser.rs  spec.rs  value.rs
tests/: integration_tests.rs  macro_tests.rs  property_tests.proptest-regressions  property_tests.rs  toon_spec_tests.rs
